crates/criticalup-cli/tests/snapshots/cli__init__creates_manifest_successfully.snap
---
source: crates/criticalup-cli/tests/cli/init.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
 INFO Created project manifest at /path/to/created/criticalup.toml
------
