crates/criticalup-cli/tests/snapshots/cli__init__error_on_missing_required_arg.snap
---
source: crates/criticalup-cli/tests/cli/init.rs
expression: repr
---
exit: exit status: 1

empty stdout

stderr
------
error: the following required arguments were not provided:
  --release <RELEASE>

Usage: criticalup-test init --release <RELEASE>

For more information, try '--help'.
------
