crates/criticalup-cli/tests/snapshots/cli__init__help_message.snap
---
source: crates/criticalup-cli/tests/cli/init.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
Create a manifest file (criticalup.toml) inside current directory

Usage:
  criticalup-test init [OPTIONS] --release <RELEASE>

Options:
      --release <RELEASE>           Release version of Ferrocene from https://releases.ferrocene.dev/ferrocene/index.html
      --print                       Only print the contents of manifest instead of saving to file
  -v, --verbose...                  Enable debug logs, -vv for trace
      --log-level [<LOG_LEVEL>...]  Tracing directives
  -h, --help                        Print help
------
