crates/criticalup-cli/tests/snapshots/cli__init__shows_error_on_existing_manifest.snap
---
source: crates/criticalup-cli/tests/cli/init.rs
expression: repr
---
exit: exit status: 1

empty stdout

stderr
------
error: A 'criticalup.toml' already exists in the current directory.
Please delete or move that file and run the 'criticalup init' command again.
------
